force-app/main/default/objects/Risk_Assessment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Risk Assessments</relationshipLabel>
    <relationshipName>Risk_Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>