force-app/main/default/objects/Risk_Assessment__c/fields/Risk_Closed__c.field-meta.xml
<CustomField>
    <fullName>Risk_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Closed</label>
    <type>Checkbox</type>
</CustomField>