force-app/main/default/objects/Risk_Assessment__c/fields/Risk_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Closed_Date__c</fullName>
    <label>Risk Closed Date</label>
    <type>Date</type>
</CustomField>