force-app/main/default/objects/Risk_Assessment__c/fields/Risk_Factor__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factor__c</fullName>
    <label>Risk Factor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Expectations</fullName>
            </value>
            <value>
                <fullName>Customer Participation</fullName>
            </value>
            <value>
                <fullName>Product release</fullName>
            </value>
            <value>
                <fullName>Integration and 3rd parties</fullName>
            </value>
            <value>
                <fullName>System Technical Issues</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>