force-app/main/default/objects/Risk_Assessment__c/fields/Risk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Risk_Notes__c</fullName>
    <label>Risk Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>