force-app/main/default/objects/Risk_Assessment__c/fields/Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status__c</fullName>
    <formula>IMAGE(
CASE( Risk_Level__c,
&quot;Low&quot;, &quot;/resource/PSAGreen&quot;,
&quot;Medium&quot;, &quot;/resource/PSAYellow&quot;,
&quot;High&quot;, &quot;/resource/PSARed&quot;,
&quot;/s.gif&quot;),
&quot;Priority Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Status</label>
    <type>Text</type>
</CustomField>