force-app/main/default/objects/Risk_Assessment__c/recordTypes/PSA_Risk_Assessment.recordType-meta.xml
<RecordType>
    <fullName>PSA_Risk_Assessment</fullName>
    <active>true</active>
    <description>PSA risk assessment</description>
    <label>PSA Risk Assessment</label>
</RecordType>